crates/cli/tests/snapshots/lib__check@unknown_variant.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/unknown_variant.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/unknown_variant.nemo
---
success: false
exit_code: 1
----- stdout -----
[07] Error: Unknown type Unknown
   ╭─[ tests/check/unknown_variant.nemo:3:5 ]
   │
 3 │     Unknown::C _ => {}
   │     ───┬───  
   │        ╰───── Unknown type Unknown
───╯


----- stderr -----
Error: "Check failed with 1 errors"
